# facerust

./: .gitignore  C_INTEGRATION_EXAMPLE.md  Cargo.toml  INTEGRATION_GUIDE.md  MODELS.md  Makefile  README.md  build.rs  download_models.sh  example_c_integration.c  example_c_with_real_image.c  extract_probe_rust.cpp  facerust_wrapper.hpp  install_opencv.sh  integration_example.hpp
c_integration/: CMakeLists.txt  README.md  build.sh  compile_commands.json  example_c.cpp  facerust.h
src/: face_recognition.rs  ffi.rs  lib.rs  types.rs  watcher.rs
